<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    tools:context=".quiz">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:max="10"
        android:progressTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progressTV"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="88dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1/10" />

    <TextView
        android:id="@+id/questionTV"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#E91E63"
        android:text="@string/quest"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#050505"
        android:textColorHint="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="377dp"
        android:layout_height="295dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTV">

        <ImageView
            android:id="@+id/questionIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/f" />
    </RelativeLayout>

    <Button
        android:id="@+id/choice1btn"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/green"
        android:onClick="doSmth"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/choice2btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:text="@string/opta" />

    <Button
        android:id="@+id/choice2btn"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/teal_200"
        android:onClick="doSmth"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/choice1btn"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:text="@string/optb" />

    <Button
        android:id="@+id/choice3btn"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:onClick="doSmth"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/choice4btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice1btn"
        tools:text="@string/optc" />

    <Button
        android:id="@+id/choice4btn"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/design_default_color_secondary_variant"
        android:onClick="doSmth"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/choice3btn"
        app:layout_constraintTop_toBottomOf="@+id/choice2btn"
        tools:text="@string/optd" />

    <Button
        android:id="@+id/movebtn"
        android:layout_width="233dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="@color/design_default_color_primary_variant"
        android:onClick="doSmthBtn"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice3btn"
        app:layout_constraintVertical_bias="0.481"
        tools:text="@string/check" />

</androidx.constraintlayout.widget.ConstraintLayout>